samples/_failures_safe/1761299198_e1a9a4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47925059.c: In function ‘main’:
./samples/SAFE/__tmp_47925059.c:182:25: error: expected ‘;’ at end of input
  182 |         print_token_type
      |                         ^
      |                         ;
./samples/SAFE/__tmp_47925059.c:182:9: error: expected declaration or statement at end of input
  182 |         print_token_type
      |         ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_47925059.c:182:9: error: expected declaration or statement at end of input
